src/tests/functionality/assignment_5_functions_headers/valid/06_mandatory_pointer_parameter_pass_by_reference.c
void inc(int *p) {
    *p = *p + 1;
    return;
}

int main() {
    int x = 4;
    inc(&x);
    return x;
}
