src/tests/functionality/assignment_5_functions_headers/invalid_semantic/20_mandatory_void_function_return_value_mismatch.c
void bad() {
    return 1;
}

int main() {
    bad();
    return 0;
}
